tdf#166102: replace < and > with parentheses

=sum<A1:A3> was exported to =sumA1:A3 making the
expression faulty

I also tried replacing them with spaces but then it causes
a Syntax error in Word after updating the field

Change-Id: I25b42d0a06335a4e5d8c8df90e8cf30e191fe426
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183967
Tested-by: Jenkins
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 7f8602e4feac16b5d0f6b80b93d5be6378f0aa11)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184076
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>